base/petclinic/petclinic-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/part-of: petclinic
  name: petclinic
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: petclinic
    weight: 100
  wildcardPolicy: None
